JSAI/error/src/test/resources/base/v035.js

var x = {99.0: 1};
print(x[99]);